force-app/main/default/objects/Scene_Locations__c/Scene_Locations__c.object-meta.xml
<CustomObject>
    <label>Scene Location</label>
    <nameField>
        <label>Address Line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scene Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>