force-app/main/default/objects/Scene_Locations__c/fields/Borough__c.field-meta.xml
<CustomField>
    <fullName>Borough__c</fullName>
    <label>Borough (NYC Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Queens</fullName>
            </value>
            <value>
                <fullName>Staten Island</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>