force-app/main/default/objects/Scene_Locations__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>