force-app/main/default/objects/Scene_Locations__c/fields/County_Lookup__c.field-meta.xml
<CustomField>
    <fullName>County_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Scene Locations</relationshipLabel>
    <relationshipName>Scene_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>