force-app/main/default/objects/Scene_Locations__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Please provide any special details related to this location</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>