force-app/main/default/objects/Scene_Locations__c/fields/Property_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Scene Locations</relationshipLabel>
    <relationshipName>Scene_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>