force-app/main/default/objects/Scene_Locations__c/fields/Property_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Scene Locations (Property Owner 2)</relationshipLabel>
    <relationshipName>Scene_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>