force-app/main/default/objects/Scene_Locations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address_1__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>County__c</columns>
    <columns>State__c</columns>
    <columns>Zipcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>